# WindowOptimization

./: .gitmodules  CMakeLists.txt  OptimizerDebugC.cpp  OptimizerDebugC.h  README.md  ba_show.rviz  main.cpp  main_ba.cpp  test.cpp  test_img_loader.cpp  utils.h
src/: Camera.cpp  Camera.h  FullSystem.cpp  FullSystem.h  Point.cpp  Point.h  Residual.cpp  Residual.h  alg_config.h  alg_utils.cpp  alg_utils.h  debug_utils.cpp  debug_utils.h  types.h  window_optimization.cpp  window_optimization.h
src/backend/: Camera.cpp  Camera.h  Hession.h  Point.cpp  Point.h  Residual.cpp  Residual.h  type_pre_declares.h  window_optimization.cpp  window_optimization.h
src/frontend/: DispMatcher.cpp  DispMatcher.h  Frame.cpp  Frame.h  PixelSeletor.cpp  PixelSeletor.h
src/io/: ImageLoader.cpp  ImageLoader.h
srcBA/: HessionBA.h  ResidualBA.h  main_ba.cpp  types.h
utils/: baproblem.h  utils.cpp  utils.h
